# ll47-e141

./: .gitignore  BUILD_GUIDE.md  COMMANDS.md  Dockerfile  FIREBASE_GUIDE.md  LL47_E141_Desktop.spec  MIGRATION_NODE.md  QUICK_BUILD.md  QuanLyLL47.spec  README.md  build_apk.bat  build_apk.sh  build_apk_fixed.bat  build_both.bat  build_desktop.bat  build_desktop_pyinstaller.bat  build_web.bat  cleanup_worker.py  codemagic.yaml  deploy_server.bat  deploy_server.py  diagnose_vs.bat  find_and_run_exe.bat  firestore.rules  fix.py  fix_notif.py  install_all.bat  install_all.ps1  install_flutter.ps1  main.py  main_refactored.py  make_app_zip.py  migrate_store.py  patch_build.py  pyproject.toml  refactor_push.py  refactor_task.py  render.yaml  requirements.txt  reset.bat  (+12 more)
.github/workflows/: build-apk.yml
app/: __init__.py  desktop_notif.py  fcm.py  firebase_auth.py  firebase_config.py  firebase_storage.py  firestore_client.py  image_utils.py  presence.py  store.py
chat_app/: patch_isar.py  pubspec.yaml
chat_app/android/app/: build.gradle.kts
chat_app/ios/Runner.xcodeproj/: project.pbxproj
chat_app/lib/: main.dart
chat_app/lib/collections/: conversation.dart  conversation.g.dart  message.dart  (+1 more)
chat_app/linux/: CMakeLists.txt
flutter/lib/: firebase_init.dart  main.dart
functions/: index.js  package-lock.json  package.json
server/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
server/scripts/: deploy_vps.sh  migrate_data.sh  set-admin.js  set-profile.js  update_vps.sh
server/src/: auth.js  db.js  documents.js  fcm.js  index.js  realtime.js  storage.js
storage/data/: ll47_data.json  remember_login.json  remember_user.txt
(+8 files in other folders)
